--- a/MyService/app/src/main/AndroidManifest.xml
+++ b/MyService/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <service
+        android:name=".OriginService"
+        android:enabled="true"
+        android:exported="true">
+    </service>
+    <service
+        android:name=".DicodingIntentService"
+        android:exported="false">
+    </service>
   </application>
 
 </manifest>
