Finished CatalogueMovie project

--- a/CatalogueMovie/app/build.gradle
+++ b/CatalogueMovie/app/build.gradle
@@ -1,28 +1,42 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    defaultConfig {
-        applicationId "com.ramusthastudio.cataloguemovie"
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  compileSdkVersion 27
+  defaultConfig {
+    applicationId "com.ramusthastudio.cataloguemovie"
+    minSdkVersion 15
+    targetSdkVersion 27
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  }
+  buildTypes {
+    debug {
+      buildConfigField "String", "SERVER_API", "\"122392ae2fd4dfcfae6edf755ec9a1f2\""
+      buildConfigField "String", "SERVER_URL", "\"https://api.themoviedb.org/3\""
+      buildConfigField "String", "IMAGE_URL", "\"http://image.tmdb.org/t/p\""
+      buildConfigField "String", "LANGUAGE", "\"en-US\""
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.android.support:appcompat-v7:27.0.2'
+  implementation 'com.android.support:design:27.0.2'
+  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+  implementation 'com.loopj.android:android-async-http:1.4.9'
+  implementation 'com.google.code.gson:gson:2.8.2'
+  implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+  implementation 'com.github.bumptech.glide:glide:4.5.0'
+  implementation 'com.android.support:support-v4:27.0.2'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'com.android.support.test:runner:1.0.1'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
