--- a/CatalogueMovie/app/src/main/AndroidManifest.xml
+++ b/CatalogueMovie/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
       android:theme="@style/AppTheme">
     <activity
         android:name=".MainActivity"
+        android:configChanges="orientation|screenSize|keyboardHidden"
         android:windowSoftInputMode="stateHidden">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
