--- a/MyNotesApp/app/src/main/AndroidManifest.xml
+++ b/MyNotesApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ramusthastudio.mynotesapp">
 
+  <permission android:name="com.ramusthastudio.mynotesapp.READ_DATABASE"
+      android:protectionLevel="normal"/>
+  <permission android:name="com.ramusthastudio.mynotesapp.WRITE_DATABASE"
+      android:protectionLevel="normal"/>
+
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
@@ -16,8 +21,13 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".FormAddUpdateActivity">
-    </activity>
+    <activity android:name=".FormAddUpdateActivity"/>
+    <provider
+        android:authorities="com.ramusthastudio.mynotesapp"
+        android:name=".NoteProvider"
+        android:exported="true"
+        android:readPermission="com.ramusthastudio.mynotesapp.READ_DATABASE"
+        android:writePermission="com.ramusthastudio.mynotesapp.WRITE_DATABASE"/>
   </application>
 
 </manifest>
