--- a/CatalogueMovie/app/build.gradle
+++ b/CatalogueMovie/app/build.gradle
@@ -24,6 +24,7 @@ android {
   }
 }
 
+
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -35,10 +36,10 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.8.2'
   implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
   implementation 'com.github.bumptech.glide:glide:4.5.0'
-  implementation 'com.jakewharton:butterknife:8.8.1'
+  //  implementation 'com.jakewharton:butterknife:8.8.1'
 
   annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+  //  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.1'
