--- a/CatalogueMovie/favoritemovie/build.gradle
+++ b/CatalogueMovie/favoritemovie/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 27
+  compileSdkVersion 26
+
+
+
   defaultConfig {
-    applicationId "com.ramusthastudio.cataloguemovie"
+    applicationId "com.ramusthastudio.favoritemovie"
     minSdkVersion 15
-    targetSdkVersion 27
+    targetSdkVersion 26
     versionCode 1
     versionName "1.0"
+
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
+
   buildTypes {
     debug {
       buildConfigField "String", "SERVER_API", "\"122392ae2fd4dfcfae6edf755ec9a1f2\""
@@ -24,23 +29,14 @@ android {
   }
 }
 
-
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'com.android.support:appcompat-v7:27.0.2'
-  implementation 'com.android.support:design:27.0.2'
-  implementation 'com.android.support:support-v4:27.0.2'
+
+  implementation 'com.android.support:appcompat-v7:26.1.0'
+  implementation 'com.android.support:design:26.1.0'
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
-  implementation 'com.loopj.android:android-async-http:1.4.9'
-  implementation 'com.google.code.gson:gson:2.8.2'
-  implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
   implementation 'com.github.bumptech.glide:glide:4.5.0'
-  //  implementation 'com.jakewharton:butterknife:8.8.1'
-//  implementation 'com.android.support:cardview-v7:27.0.2'
-
   annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
-  //  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'com.android.support.test:runner:1.0.1'
