fixing widget display

--- a/CatalogueMovie/app/src/main/AndroidManifest.xml
+++ b/CatalogueMovie/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         android:readPermission="com.ramusthastudio.cataloguemovie.READ_DATABASE"
         android:writePermission="com.ramusthastudio.cataloguemovie.WRITE_DATABASE"/>
 
-    <receiver android:name=".widget.FavoriteWidget">
+    <receiver
+        android:name=".widget.FavoriteWidget">
       <intent-filter>
         <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
       </intent-filter>
@@ -48,7 +49,9 @@
 
     <service
         android:name=".widget.FavoriteWidgetService"
-        android:permission="android.permission.BIND_REMOTEVIEWS"/>
+        android:exported="false"
+        android:permission="android.permission.BIND_REMOTEVIEWS"
+        android:readPermission="com.ramusthastudio.cataloguemovie.READ_DATABASE"/>
     <service
         android:name=".service.UpcomingReminderService"
         android:exported="false">
