--- a/CatalogueMovie/app/src/main/AndroidManifest.xml
+++ b/CatalogueMovie/app/src/main/AndroidManifest.xml
@@ -4,12 +4,8 @@
 
   <uses-permission android:name="android.permission.INTERNET"/>
 
-  <permission
-      android:name="com.ramusthastudio.cataloguemovie.READ_DATABASE"
-      android:protectionLevel="normal"/>
-  <permission
-      android:name="com.ramusthastudio.cataloguemovie.WRITE_DATABASE"
-      android:protectionLevel="normal"/>
+  <permission android:name="com.ramusthastudio.cataloguemovie.READ_DATABASE"/>
+  <permission android:name="com.ramusthastudio.cataloguemovie.WRITE_DATABASE"/>
 
   <application
       android:name=".Application"
@@ -49,9 +45,8 @@
 
     <service
         android:name=".widget.FavoriteWidgetService"
-        android:exported="false"
-        android:permission="android.permission.BIND_REMOTEVIEWS"
-        android:readPermission="com.ramusthastudio.cataloguemovie.READ_DATABASE"/>
+        android:exported="true"
+        android:permission="android.permission.BIND_REMOTEVIEWS"/>
     <service
         android:name=".service.UpcomingReminderService"
         android:exported="false">
