--- a/CatalogueMovie/app/src/main/AndroidManifest.xml
+++ b/CatalogueMovie/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.ramusthastudio.cataloguemovie">
 
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <permission android:name="com.ramusthastudio.cataloguemovie.READ_DATABASE"/>
   <permission android:name="com.ramusthastudio.cataloguemovie.WRITE_DATABASE"/>
